Added a past build I did pre knit to knit to this Test repo.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "numpy>=2.3.5",
     "pillow>=12.0.0",
+    "pyinstaller>=6.17.0",
     "pyobjc>=12.1",
     "tkmacosx>=1.0.5",
     "tkmacosx; sys_platform == 'darwin'",
